Added Products and category CRUD

--- a/Task1LoginRegister/appsettings.json
+++ b/Task1LoginRegister/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "dbcs": "Server=AAMIN_LAPTOP\\SQLEXPRESS;Database=WebMobiTask1DB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustserverCertificate=True;"
+    "dbcs": "Server=.\\SQLEXPRESS;Database=WebMobiTask1DB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustserverCertificate=True;"
   },
   "AllowedHosts": "*"
 }
