#Added Hasvariant functionality in products

--- a/Task1LoginRegister/Task1LoginRegister.csproj
+++ b/Task1LoginRegister/Task1LoginRegister.csproj
@@ -27,6 +27,7 @@
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Views\Review\" />
+    <Folder Include="wwwroot\Images\variants\" />
   </ItemGroup>
 
 </Project>
